# invisibot

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  mock.sql
.github/workflows/: backend.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  dev.Dockerfile  sqlx-data.json
backend/client-api/: Cargo.toml
backend/client-api/src/: connect_response.rs  game_message.rs  lib.rs  round_response.rs
backend/common/: Cargo.toml
backend/common/src/: coordinate.rs  direction.rs  lib.rs  tournament.rs
backend/game/: Cargo.toml
backend/game/src/: client_handler.rs  game.rs  game_config.rs  lib.rs  player.rs
backend/game/src/clients/: connect_response.rs  game_message.rs  mod.rs  player_id.rs  round_response.rs
backend/game/src/game_logic/: game.rs  game_config.rs  game_map.rs  game_state.rs  mod.rs  player.rs
backend/game/src/game_map/: game_map.rs  map.rs  mod.rs  player.rs  tile.rs  tile_type.rs
backend/game/src/persistence/: completed_game.rs  mod.rs
backend/game/src/utils/: coordinate.rs  direction.rs  game_error.rs  mod.rs
backend/postgres/: Cargo.toml
backend/postgres/migrations/: 20230512224844_initial.down.sql  20230512224844_initial.up.sql  20230528152332_add_tournaments.down.sql  20230528152332_add_tournaments.up.sql  20230826131546_configs.down.sql  20230826131546_configs.up.sql
backend/postgres/src/: db_connection.rs  lib.rs  postgres_error.rs  postgres_handler.rs
backend/postgres/src/repositories/: config_repository.rs  game_repository.rs  map_repository.rs  map_wall_repository.rs  mod.rs  player_repository.rs  round_repository.rs  shot_tile_repository.rs  starting_position_repository.rs  tournament_repository.rs
backend/postgres/src/services/: config_service.rs  get_game_service.rs  get_tournament_service.rs  mod.rs  new_game_service.rs  new_tournament_service.rs  round_service.rs  update_game_service.rs
backend/postgres/src/tables/: config.rs  contestant.rs  game.rs  map.rs  map_wall.rs  mod.rs  player.rs  round.rs  shot_tile.rs  starting_position.rs  tournament.rs
backend/raw_map_files/: game_map_1.psd
backend/resources/maps/: game_map_1.psd  game_map_2.psd  game_map_3.psd
backend/server/: Cargo.toml
backend/server/src/: config.rs  current_game.rs  main.rs  ws_pool.rs
backend/server/src/api/: game.rs  games.rs  get_game.rs  maps.rs  mod.rs  response.rs  tournament.rs
backend/src/: main.rs  player.rs
backend/src/api/: get_game.rs  mod.rs
backend/src/game_logic/: game_map.rs  game_state.rs  mod.rs  player.rs
backend/src/utils/: coordinate.rs  game_error.rs  mod.rs
backend/websocket-api/: Cargo.toml
backend/websocket-api/src/: lib.rs
invisibot-frontend/: .env.example  dev.Dockerfile  next.config.js  package.json
invisibot-frontend/src/api/: Api.ts  Player.ts  Round.ts  TileType.ts
invisibot-frontend/src/components/elements/error_card/: ErrorCard.tsx
invisibot-frontend/src/components/elements/loading_bar/: LoadingBar.tsx
invisibot-frontend/src/components/elements/round_bar/: RoundBar.module.scss  RoundBar.tsx
invisibot-frontend/src/components/views/error_header/: ErrorHeader.module.scss  ErrorHeader.tsx
invisibot-frontend/src/components/views/game_board/: GameBoard.module.scss  GameBoard.tsx
invisibot-frontend/src/components/views/game_control_dashboard/: GameControlDashboard.module.scss  GameControlDashboard.tsx
invisibot-frontend/src/pages/: index.tsx
invisibot-frontend/src/styles/: Home.module.css  globals.css
src/: game_error.rs  game_map.rs  game_state.rs  main.rs  player.rs
src/utils/: coordinate.rs  mod.rs
