[package]
name = "invisibot_client_api"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.3", features = ["serde"] }

[dependencies.invisibot_common]
path = "../common"
