[package]
name = "invisibot_game"
version = "0.1.0"
edition = "2021"
workspace = ".."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
bmp = "0.5.0"
uuid = { version = "1.3" }
async-trait = "0.1"
