[package]
name = "invisibot_postgres"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-async-std-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "1.0"

[dependencies.invisibot_game]
path = "../game"

[dependencies.invisibot_common]
path = "../common"
