[package]
name = "invisibot_server"
version = "0.1.0"
edition = "2021"
workspace = ".."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rocket = { version = "0.5.0-rc", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
uuid = { version = "1.3", features = ["serde"] }
tokio = "1.28"

[dependencies.invisibot_game]
path = "../game"

[dependencies.invisibot_websocket_api]
path = "../websocket-api"

[dependencies.invisibot_postgres]
path = "../postgres"

[dependencies.invisibot_common]
path = "../common"

[dependencies.invisibot_client_api]
path = "../client-api"
