[package]
name = "invisibot_websocket_api"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
tungstenite = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.invisibot_game]
path = "../game"

[dependencies.invisibot_common]
path = "../common"

[dependencies.invisibot_client_api]
path = "../client-api"
