[package]
name = "invisibot_websocket_api"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
tokio = { version = "1.32", features = ["time"] }
tokio-tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"

[dependencies.invisibot_game]
path = "../game"

[dependencies.invisibot_common]
path = "../common"

[dependencies.invisibot_client_api]
path = "../client-api"
